# urirun-flow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  conformance.py  conftest.py  goal.yaml  local.dev.txt  pyproject.toml
.github/workflows/: ci.yml
conformance/: build_flow.js
examples/: flow.ts  run_demo.py  web_recon.py
js/: urirun-flow.js
src/urirun_flow/: __init__.py  cli.py  run.py
tests/: test_conformance.py  test_dataflow_reference_class.py  test_diagnostics.py  test_env_probe_cache.py  test_env_selection.py  test_flow.py  test_flow_planner_helpers.py  test_light_imports.py  test_recovery.py  test_remember_env_stable.py  test_resilience.py  test_run.py  test_thin_self_heal.py  test_thin_timeline_ms.py  test_util.py
urirun_flow/: __init__.py  _env_probe_cache.py  _flow_normalize.py  _planner_cdp.py  _util.py  diagnostics.py  env_selection.py  envelope.py  flow.py  flow_planner.py  flow_thin.py  flow_verify.py  recovery.py
