[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-flow"
version = "0.2.2"
description = "Author urirun URI flows in typed Python (Pydantic), convert to/from YAML, and run them through urirun when the runtime is installed."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2",
  "pyyaml>=6",
  "urirun-connector-router>=0.2.0",
]

[project.optional-dependencies]
llm = ["litellm>=1.60"]
run = ["urirun>=0.4.190"]
test = ["pytest>=7"]

[project.scripts]
urirun-flow = "urirun_flow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_flow*"]
