[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-flow"
version = "0.2.3"
description = "Author urirun URI flows in typed Python (Pydantic), convert to/from YAML, and run them through urirun when the runtime is installed."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.18",
    "pydantic>=2",
  "pyyaml>=6",
  "urirun-connector-router>=0.2.0",
]

[project.optional-dependencies]
llm = ["litellm>=1.60"]
run = ["urirun>=0.4.190"]
test = ["pytest>=7"]

[project.scripts]
urirun-flow = "urirun_flow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_flow*"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
